crates/toml_edit/tests/snapshots/invalid/float/trailing-exp-dot.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-exp-dot =  0.e
  |                       ^
invalid fraction, expected digits
